# fastapi-template

./: Dockerfile  LICENSE  Makefile  README.md  alembic.ini  pyproject.toml
src/: config.py  entrypoint.sh  logger.py  main.py  tasks.py
src/api/routes/: service_routers.py
src/api/schemas/: health.py
src/crud/: base.py
src/db/migrations/: env.py  script.py.mako
src/db/models/: db_base.py
src/services/: health_service.py
tests/: config.py  docker-compose.tests.yaml  test_basic.py
