[project]
name = "fastapi-template"
version = "0.1.0"
description = "fastapi-template"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.112.2",
    "uvicorn[standard]>=0.30.6",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "sqlalchemy>=2.0.43",
    "alembic>=1.16.4",
    "asyncpg>=0.30.0",
    "greenlet>=3.2.4",
    "taskiq>=0.11.18",
    "taskiq-redis>=1.1.0",
    "loguru>=0.7.3",
]

[dependency-groups]
dev = [
    "ruff>=0.5.5",
]

tests = [
    "pytest>=8.3.2",
    "pytest-asyncio>=0.23.8",
]

[tool.ruff]
cache-dir = "/tmp/ruff-cache/"
extend-exclude = ["*/migrations/*"]
fix = true
line-length = 120
unsafe-fixes = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint]
select = ["E", "W", "F", "C", "I", "N", "ASYNC", "A", "EM", "T20", "PYI", "RET", "ARG"]
ignore = ["C901"]

[tool.ruff.lint.isort]
no-lines-before = ["standard-library", "local-folder"]
known-local-folder = ["src"]


[tool.pytest.ini_options]
addopts = ["-vv", "-ra"]

testpaths = ["tests/integration"]
